# JustinChat

./: .gitignore  README.md
JustinChat/: CMakeLists.txt  Pictures.qrc  Styles.qrc  global.cpp  global.h  httpmgr.cpp  httpmgr.h  icons.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h  timerbtn.cpp  timerbtn.h
JustinChat/resources/styles/: style.qss
OtherProj/VerifyServer/: config.js  config.json  const.js  email.js  package.json  proto.js  redis.js  server.js
VisualStudioProj/GateServer/: .claudiaideconfig  premake5.lua
VisualStudioProj/GateServer/GateServer/src/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  JCpch.cpp  JCpch.h  Log.cpp  Log.h  LogicSystem.cpp  LogicSystem.h  MySqlMgr.h  MysqlDAO.cpp  MysqlDAO.h  MysqlMgr.cpp  RedisMgr.cpp  RedisMgr.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  message.grpc.pb.cc  message.pb.cc  message.pb.h  message.proto
VisualStudioProj/GateServer/GateServer/src/Core/: Base.h  Log.cpp  Log.h  Singleton.h
